# autumn_walk

./: README.md  pyproject.toml
src/autumn_walk/: character_sprite.py  leaf_sprite.py  main.py
