[project]
name = "autumn-walk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
autumn-walk = "autumn_walk.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
